test/files/pos/t1235/Test.java
import scala.collection.immutable.HashMap;

public class Test {

  void foo() {
    new HashMap.HashTrieMap<String, String>(0, new HashMap[0], 0);
  }
}

