test/files/neg/t10701/Test.java
/*
 * javac: -Werror -deprecation
 */
public class Test {
    public static void main(String [] args) {
        Meh.whatever();
    }
}